list(APPEND COMMON_DEPENDENCIES common_utils common_net common_thread)

if (WIN32)
    LIST(APPEND COMMON_DEPENDENCIES wsock32 ws2_32)
elseif(LINUX)
    LIST(APPEND COMMON_DEPENDENCIES pthread)
endif()

add_subdirectory(lab01)
add_subdirectory(lab02)
add_subdirectory(lab03)
add_subdirectory(lab04)
add_subdirectory(lab05)
add_subdirectory(lab08)
add_subdirectory(pr01)
add_subdirectory(pr02)
add_subdirectory(pr03)
add_subdirectory(pr04)
add_subdirectory(pr08)